--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "v0.45.0"
+    "@redwoodjs/core": "^0.45.1-canary.26"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
